reverted this fix, resulted in new problem on desktop. Issue was probably already solved in another commit. After reverting commit no issue with logo on mobile

--- a/src/sources/forus-webshop/scss/_common/layout/_navigation.scss
+++ b/src/sources/forus-webshop/scss/_common/layout/_navigation.scss
@@ -374,7 +374,7 @@
             @include cf();
 
             .button {
-                margin: 0;
+                margin: 0px 0px 0px 10px;
                 display: flex;
 
                 &.button-mobile {
